Major refactor of method sortAtoZ